--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,8 @@
 }
 body {
     font-family: 'Poppins', sans-serif;
-    background: #1F2E35;
+    /*background: #1F2E35;*/
+    background: orange;
 }
 .container {
     width: 1140px;
@@ -654,6 +655,9 @@ a {
     height: 60px;
     margin-right: 20px;
 }
+
+
+
 .client-img h2 {
     font-weight: 600;
     font-size: 20px;
