--- a/css/style.css
+++ b/css/style.css
@@ -4,8 +4,8 @@
 }
 body {
     font-family: 'Poppins', sans-serif;
-    /*background: #1F2E35;*/
-    background: orange;
+    background: #1F2E35;
+    /*background: orange;*/
 }
 .container {
     width: 1140px;
